# LimdropMainWebSource

./: README.md
LimdropMain/: CMakeLists.txt  checkAjax.html  main.cpp  someshit.cpp
LimdropMain/controllers/: accounts.cc  accounts.h  activation.cc  activation.h  administration.cc  administration.h  basket.cc  basket.h  business.cc  business.h  checkpy.cc  checkpy.h  checkweb.cc  checkweb.h  factory.cc  factory.h  limjson.cpp  limjson.h  my.cc  my.h  payment.cc  payment.h  product.cc  product.h  profile.cc  profile.h  signup.cc  signup.h  sutils.cc  sutils.h  testsys.cc  testsys.h  trjson.cc  trjson.h  uploads.cc  uploads.h  wallet.cc  wallet.h
LimdropMain/filters/: businesscreate.cc  businesscreate.h  businesslogin.cc  businesslogin.h  changeparamsfilter.cc  changeparamsfilter.h  checktraffic.cc  checktraffic.h  createaccount.cc  createaccount.h  login.cc  login.h  passwordchangefilter.cc  passwordchangefilter.h  paymentcheck.cc  paymentcheck.h  profilechangefilter.cc  profilechangefilter.h
LimdropMain/limutils/: CMakeLists.txt  PatternFiller.cpp  PatternFiller.h  passhandler.cpp  pyutils.h
embeddPython/: CMakeLists.txt  main.cpp
embeddPython/controllers/: my.cc  testsys.cc
embeddPython/limutils/: CMakeLists.txt  PatternFiller.cpp  passhandler.h
